Fix table alignment issue

--- a/src/styles/tables.scss
+++ b/src/styles/tables.scss
@@ -32,9 +32,9 @@ table {
         vertical-align: middle;
     }
     
-    td:last-child {
-        text-align: right;
-    }
+    // td:last-child {
+    //     text-align: right;
+    // }
 }
 
 .table-scroll-container {
